[package]
name = "ff_ce"
version = "0.6.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Library for building and interfacing with finite fields"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/matter-labs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/matter-labs/ff"

[dependencies]
byteorder = "1"
rand = "0.4"
ff_derive = { version = "0.4.0", path = "ff_derive", optional = true }

[features]
default = []
derive = ["ff_derive"]
