[package]
name = "ff_ce"
version = "0.7.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Library for building and interfacing with finite fields"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/matter-labs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/matter-labs/ff"
edition = "2018"

[dependencies]
byteorder = "1"
rand = "0.4"
ff_derive_ce = { version = "0.5.0", path = "ff_derive", optional = true }
serde = "1.0.80"
hex = "0.3.2"
serde_json = "1.0"

[dev.dependencies]
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"

[features]
default = []
derive = ["ff_derive_ce"]
derive_serde = ["derive", "ff_derive_ce/derive_serde"]
